--- a/case_java8/pom.xml
+++ b/case_java8/pom.xml
@@ -53,6 +53,11 @@
             <version>0.16</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.3</version>
+        </dependency>
 
     </dependencies>
 
