--- a/ElasticSearchDemo/pom.xml
+++ b/ElasticSearchDemo/pom.xml
@@ -9,14 +9,23 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>Test</artifactId>
+    <artifactId>ElasticSearchDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Test</name>
+    <name>ElasticSearchDemo</name>
     <description>Test</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>co.elastic.clients</groupId>-->
+<!--            <artifactId>elasticsearch-java</artifactId>-->
+<!--            <version>8.1.0</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
         <!--        mysql依赖-->
         <dependency>
             <groupId>com.mysql</groupId>
@@ -119,6 +128,9 @@
             <artifactId>jcstress-samples</artifactId>
             <version>0.3</version>
         </dependency>
+
+
+
     </dependencies>
 
 
